# bwapi

./: CMakeLists.txt  createdebug  createrelease  nixshell
bwapi/: CMakeLists.txt
bwapi/BWAPI/Source/: GameUpdate.cpp
bwapi/BWAPI/Source/BWAPI/: GameImpl.cpp
bwapi/BWAPILIB/Source/: UnitType.cpp
bwapi/BWAPILauncher/: CMakeLists.txt
bwapi/BWAPILauncher/Source/: Main.cpp
bwapi/ExampleAIModule/: CMakeLists.txt
bwapi/ExampleAIModule/Source/: AIStructs.cpp  AIStructs.h  EigenCereal.h  ExampleAIModule.cpp  ExampleAIModule.h  secret.stash
bwapi/Overmind/: CMakeLists.txt  Overmind.cpp
bwapi/include/BWAPI/: Type.h
